--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Mageto/UrlChecker",
+    "name": "mageto/url-checker",
     "description": "A url checker for laravel",
     "type": "library",
     "authors": [
